# virus38

.github/workflows/: release.yml
VIRUS/: CMakeList.txt  CMakeLists.txt  virus38.cpp
